removed the menu when were at 500px for now just to make sure my slider break points work, believe it was messing them up also set it up so only 1 movie could be seen in mobile and two movies when on tablet till 860px width

--- a/src/App.css
+++ b/src/App.css
@@ -59,3 +59,8 @@ form a:hover {
 .swiper-button-prev.swiper-buttons-added-class {
     left: -15px;
 }
+@media screen and (max-width: 600px) {
+    .mainUl {
+        display: none !important;
+    }
+  }
